--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -268,7 +268,7 @@ jobs:
           path: artifacts
 
       - name: Delete the existing pre-release
-        run: gh release delete dev-build --cleanup-tag --yes --repo $GITHUB_REPOSITORY
+        run: gh release delete dev-build --cleanup-tag --yes --repo $GITHUB_REPOSITORY || echo "No existing dev-build release found"
         env:
           GITHUB_TOKEN: ${{github.token}}
 
